Finalizado todo o layout, faltando apenas correção de posicionamento de alguns botões e as responsividades

--- a/036.130.811-64+-+JOAO+PEDRO+BAZA+GARCIA+RODRIGUES.htm
+++ b/036.130.811-64+-+JOAO+PEDRO+BAZA+GARCIA+RODRIGUES.htm
@@ -1806,7 +1806,7 @@
 
 
 
-<div id="vehicle-detail-template" class="hide" style="display:none">
+<div id="vehicle-detail-template">
 
     <div class="vehicle-detail-modal">
 
@@ -1881,7 +1881,7 @@
 
 </div>
 
-<div id="vehicle-dpvat-template" class="hide" style="display:none">
+<div id="vehicle-dpvat-template">
 
     <div class="d-flex flex-wrap  p-10">
       
