--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@
       <meta name="language" content="portuguese, pt, pt-br">
       <meta name="copyright" content="Sistemas J">
       <meta name="author" content="Sistemas J">
-      <title>036.130.811-64 - JOAO PEDRO BAZA GARCIA RODRIGUES</title>
+      <title>Index HTML</title>
+      <!-- 036.130.811-64 - JOAO PEDRO BAZA GARCIA RODRIGUES -->
       <link rel="SHORTCUT ICON" href="https://www.ph3a.com.br/DataBusca/Content/Images/icon.ico">
       <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -895,7 +896,7 @@
                </section>
             </div> <!--Final Componente para cliente PJ 2-->
             
-            <div class="main-card-dados_profissionais"> <!-- Começo lista de daods profissionais-->
+            <div class="main-card-dados_profissionais"> <!-- Começo lista de dados profissionais-->
                <!--Este é um componente que apenas faz sentido para PF, então se for PJ, não carregar-->
                <!-- Dados profissionais-->
                <section data-section-info id="ProfessionalData" >
@@ -913,7 +914,7 @@
                      </div>
                   </div>
                </section>
-            </div> <!-- Final lista de daods profissionais-->
+            </div> <!-- Final lista de dados profissionais-->
 
             <div class="main-card-contact_persons"> <!-- Começo container de contato  -->
 
@@ -1036,7 +1037,16 @@
                            </h4>
                            
                            <div class="group-buttons-relacionamento">
-                              <button type="button" id="button-refresh-relacionamento" class="button-box">
+                              <button type="button" id="button-refresh-relacionamento" class="button-box"
+                              title="Clique para atualizar o dado a partir da fonte online"
+                              data-block="RegistrationStatus"
+                              data-spider="situacaofiscal"
+                              data-asaction="False"
+                              data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
+                              data-contact="100003613081164"
+                              data-timeout="120000"
+                              data-info=""
+                              data-line="false">
                                  <i style="font-size: 14px;" class="bi bi-arrow-clockwise icon-button"></i>
                               </button>
                               <button type="button" class="button-box">
@@ -1793,7 +1803,7 @@
                            <h4 data-section-title title="Imoveis">
                               IMOVEIS
                            </h4>
-                           <div class="button-group-lista_enderecos" data-toggle="buttons" data-source="[{&quot;Title&quot;:&quot;R PORTO FRANCO, 167, PARQUE DOS NOVOS ESTADOS&quot;,&quot;Lat&quot;:-20.420577,&quot;Long&quot;:-54.558117,&quot;Disabled&quot;:false}]">
+                           <div class="button-group-imoveis" data-toggle="buttons" data-source="[{&quot;Title&quot;:&quot;R PORTO FRANCO, 167, PARQUE DOS NOVOS ESTADOS&quot;,&quot;Lat&quot;:-20.420577,&quot;Long&quot;:-54.558117,&quot;Disabled&quot;:false}]">
                               <label class="label-left-lista_enderecos"
                                  data-toggle="tooltip" data-placement="top" title="Visualização da lista">
                                  <i class="bi bi-list-task"></i>
@@ -1828,12 +1838,13 @@
 
                            <div class="group-buttons-protestos_titulos">
                               <button type="button" id="button-refresh-lista_protestos" class="button-box"
-                                 data-block="TitleProtest"
-                                 data-spider="ProtestoNacional"
+                                 title="Clique para atualizar o dado a partir da fonte online"
+                                 data-block="RegistrationStatus"
+                                 data-spider="situacaofiscal"
                                  data-asaction="False"
                                  data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
                                  data-contact="100003613081164"
-                                 data-timeout="180000"
+                                 data-timeout="120000"
                                  data-info=""
                                  data-line="false">
                                  <i style="font-size: 14px;" class="bi bi-arrow-clockwise icon-button"></i>
@@ -1918,12 +1929,13 @@
 
                            <div class="group-buttons-protestos_titulos">
                               <button type="button" id="button-refresh-lista_protestos" class="button-box"
-                                 data-block="TitleProtest"
-                                 data-spider="ProtestoNacional"
+                                 title="Clique para atualizar o dado a partir da fonte online"
+                                 data-block="RegistrationStatus"
+                                 data-spider="situacaofiscal"
                                  data-asaction="False"
                                  data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
                                  data-contact="100003613081164"
-                                 data-timeout="180000"
+                                 data-timeout="120000"
                                  data-info=""
                                  data-line="false">
                                  <i style="font-size: 14px;" class="bi bi-arrow-clockwise icon-button"></i>
@@ -2007,10 +2019,11 @@
                               DOMINIOS
                            </h4>
 
-                           <div class="group-buttons-protestos_titulos">
-                              <button type="button" id="button-refresh-lista_protestos" class="button-box"
-                                 data-block="Domains"
-                                 data-spider="similarweb"
+                           <div class="group-buttons-dominios">
+                              <button type="button" id="button-refresh-dominios" class="button-box"
+                                 title="Clique para atualizar o dado a partir da fonte online"
+                                 data-block="RegistrationStatus"
+                                 data-spider="situacaofiscal"
                                  data-asaction="False"
                                  data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
                                  data-contact="100003613081164"
@@ -2031,7 +2044,7 @@
                </section>
             </div> <!-- Final lista de dominios -->
 
-            <div class="main-card-dados_profissionais"> <!-- Começo comportamento digital-->
+            <div class="main-card-dados_profissionais"> <!-- Começo comportamento digital--> 
                <!--Este é um componente que apenas faz sentido para PF, então se for PJ, não carregar-->
                <!-- Comportamento Digital -->
                <section data-section-info id="DigitalBehavior" >
@@ -2041,10 +2054,11 @@
                         <div class="card-header-lsta_telefone ">
                            <i class="bi bi-cloud-check-fill"></i>
                            <h4 data-section-title title="Comportamento Digital">Comportamento Digital</h4>
-                           <div class="group-buttons-protestos_titulos">
-                              <button type="button" id="button-refresh-lista_protestos" class="button-box"
-                                 data-block="VoterRegistry"
-                                 data-spider="VoterRegistry"
+                           <div class="group-buttons-comportamento_digital">
+                              <button type="button" id="button-refresh-comportamento_digital" class="button-box"
+                                 title="Clique para atualizar o dado a partir da fonte online"
+                                 data-block="RegistrationStatus"
+                                 data-spider="situacaofiscal"
                                  data-asaction="False"
                                  data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
                                  data-contact="100003613081164"
@@ -2225,10 +2239,11 @@
                               LOCAL DE VOTAÇÃO
                            </h4>
 
-                           <div class="group-buttons-protestos_titulos">
-                              <button type="button" id="button-refresh-lista_protestos" class="button-box"
-                                 data-block="VoterRegistry"
-                                 data-spider="VoterRegistry"
+                           <div class="group-buttons-votacao">
+                              <button type="button" id="button-refresh-votacao" class="button-box"
+                                 title="Clique para atualizar o dado a partir da fonte online"
+                                 data-block="RegistrationStatus"
+                                 data-spider="situacaofiscal"
                                  data-asaction="False"
                                  data-pid="1c49502e-9cd1-4613-bd93-eeab3fb5f1e9"
                                  data-contact="100003613081164"
