--- a/index.htm
+++ b/index.htm
@@ -13,8 +13,9 @@
       <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <link rel='stylesheet' type='text/css' href='style.css'>
-      <link rel="stylesheet" href="Responsive/tabletResponsive_view.css">
-      <link rel="stylesheet" href="Responsive/mobileResponsive_view.css">
+      <link rel="stylesheet" type='text/css' href='Responsive/tabletResponsive_view.css'>
+     
+     
    <!--  <link rel='stylesheet' type='text/css' href='Responsive/mobileResponsive_view.css'>--> 
 
  
