--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <link rel="SHORTCUT ICON" href="https://www.ph3a.com.br/DataBusca/Content/Images/icon.ico">
       <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-      <link rel='stylesheet' type='text/css' href='style.css'>
-      <link rel='stylesheet' type='text/css' href='Responsive/mobileResponsive_view.css'>
+      <link rel='stylesheet'  href='style.css'>
+      <link rel='stylesheet'  href='Responsive/mobileResponsive_view.css'>
 
-      <link rel="stylesheet" type='text/css' href='Responsive/tabletResponsive_view.css'>
+      <link rel="stylesheet"  href='Responsive/tabletResponsive_view.css'>
      
    <!--  <link rel='stylesheet' type='text/css' href='Responsive/mobileResponsive_view.css'>--> 
 
@@ -2341,7 +2341,7 @@
                                           <small>Score</small>
                                           <strong>459</strong>
                                           <sub class="hotbar">
-                                             <span class="circle-2" style="position: relative; right: 100%"></span>
+                                             <span class="circle-2" ></span>
                                              <span class="disabled pointer-2" ></span>
                                           </sub>
                                        </div>
@@ -2429,7 +2429,7 @@
                                           <small>Score</small>
                                           <strong class="ignore-text-with-dots">251</strong>
                                           <sub class="hotbar">
-                                             <span class="circle-5" style="position: relative; right: 49.30%"></span>
+                                             <span class="circle-5" ></span>
                                              <span class="pointer-5" style="left: 25.10%"></span>
                                           </sub>
                                        </div>
