replace index.html , style.css , and add source responsive

--- a/css/index.html
+++ b/css/index.html
@@ -12,7 +12,10 @@
       <link rel="SHORTCUT ICON" href="https://www.ph3a.com.br/DataBusca/Content/Images/icon.ico">
       <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-     <link rel="stylesheet" href="style.css">
+      <link rel='stylesheet'  href='style.css'>
+      <link rel='stylesheet'  href='Responsive/mobileResponsive_view.css'>
+
+      <link rel="stylesheet"  href='Responsive/tabletResponsive_view.css'>
      
    <!--  <link rel='stylesheet' type='text/css' href='Responsive/mobileResponsive_view.css'>--> 
 
@@ -1696,7 +1699,7 @@
                                                 <sub class="">52.048.648/0001-31</sub>
                                              </a>
                                           </div>
-
+                                          <div class="divseparar">
                                           <div class="textBox socio-container">
                                              <small>Sócios</small>
                                              <strong>1</strong>
@@ -1720,7 +1723,7 @@
                                              <small>Porc.</small>
                                              <strong>100,00</strong>
                                           </div>
-
+                                      
                                           <div class="menu_dropdown_icon">
                                              <div class="dropdown-neighbor">
                                                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -1734,7 +1737,7 @@
                                                    <li><a class="btn-socios" data-title="JOAO PEDRO BAZA GARCIA RODRIGUES" data-source="[{&quot;initial&quot;:&quot;JR&quot;,&quot;Name&quot;:&quot;JOAO PEDRO BAZA GARCIA RODRIGUES&quot;,&quot;Document&quot;:3613081164,&quot;DocumentFormatted&quot;:&quot;036.130.811-64&quot;,&quot;ContactId&quot;:100003613081164,&quot;EntryDate&quot;:&quot;01/09/2023&quot;,&quot;Quote&quot;:&quot;100,00&quot;,&quot;History&quot;:false,&quot;Role&quot;:&quot;EMPRESARIO INDIVIDUAL&quot;,&quot;DisplayUser&quot;:&quot;show&quot;,&quot;DisplayUserExchange&quot;:&quot;hide&quot;}]">Lista de sócios</a></li>
                                                 </ul>                                                </div>
                                           </div>
-
+                                       </div>
 
                                        </div>
 
@@ -2338,7 +2341,7 @@
                                           <small>Score</small>
                                           <strong>459</strong>
                                           <sub class="hotbar">
-                                             <span class="circle-2" style="position: relative; right: 100%"></span>
+                                             <span class="circle-2" ></span>
                                              <span class="disabled pointer-2" ></span>
                                           </sub>
                                        </div>
@@ -2426,7 +2429,7 @@
                                           <small>Score</small>
                                           <strong class="ignore-text-with-dots">251</strong>
                                           <sub class="hotbar">
-                                             <span class="circle-5" style="position: relative; right: 49.30%"></span>
+                                             <span class="circle-5" ></span>
                                              <span class="pointer-5" style="left: 25.10%"></span>
                                           </sub>
                                        </div>
