Corrigido bug no container de score

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
 
                   <div class="card_main-score">
 
-                     <div class="card-body-my-score">
+                     <div class="card-body-score">
 
                         <h4 class="" title="Score de Cr&#233;dito (D00)">
                            Score de Cr&#233;dito (D00)
@@ -735,7 +735,7 @@
                <!-- Score de Marketing -->
                <section class="Score" data-section-info id="MarketingScore" >
                   <div class="card_main-score">
-                     <div class="card-body-my-score">
+                     <div class="card-body-score">
                         <h4 class="" title="Score de Marketing (D00)">Score de Marketing (D00)</h4>
                         <div class="main-card-info-score">
                            <div class="thermometer-score">
@@ -758,11 +758,11 @@
                <!-- Resumo de processos Judiciais -->
                <section class="Score" data-section-info id="LawProcessSummary" >
                   <div class="card_main-score">
-                     <div class="card-body-my-score">
+                     <div class="card-body-score">
 
                         <div class="card-header-score">
                            <div class="sub_card-header-score">
-                              <h4 class="fs12 block text-center lh10" title="Processos Judiciais">Processos Judiciais</h4>                           
+                              <h4 class="" title="Processos Judiciais">Processos Judiciais</h4>                           
                            </div>
                            
                            <button type="button-score-refresh" class="button-box-score_refresh button-box"
@@ -791,7 +791,7 @@
                                     balance
                                  </span>
 
-                                 <strong class="d-inline-block">--</strong>
+                                 <strong class="">--</strong>
                               </div>
 
                               <div class="group-bottom_info-score">
