Corrigido bug no label de pessoas de contato

--- a/index.html
+++ b/index.html
@@ -1069,11 +1069,15 @@
                                           <small>Status</small>
                                           <div class="div-status_box-contact_persons">
                                              <span class="" title="Politicamente exposto" data-toggle="tooltip" data-placement="top">
-                                                PPE
+                                                <strong class="">                                                
+                                                   PPE
+                                                </strong>
                                              </span>
                                              
                                              <span class="" title="Pessoa VIP" data-toggle="tooltip" data-placement="top">
-                                                VIP
+                                                <strong class="">                                                
+                                                   VIP
+                                                </strong>
                                              </span>
                                           </div>
                                        </div>
@@ -1110,11 +1114,15 @@
                                           <small>Status</small>
                                           <div class="div-status_box-contact_persons">
                                              <span class="" title="Politicamente exposto" data-toggle="tooltip" data-placement="top">
-                                                PPE
+                                                <strong class="">                                                
+                                                   PPE
+                                                </strong>
                                              </span>
                                              
                                              <span class="" title="Pessoa VIP" data-toggle="tooltip" data-placement="top">
-                                                VIP
+                                                <strong class="">                                                
+                                                   VIP
+                                                </strong>
                                              </span>
                                           </div>                                       </div>
 
